Correct logo size on mobile

--- a/webapp/src/styles/ui-components.scss
+++ b/webapp/src/styles/ui-components.scss
@@ -248,6 +248,7 @@
   display: inline-block;
 }
 .top-bar-logo {
+  max-width: calc(100% - 57px);
   height: 45px;
   vertical-align: middle;
   margin-right: 10px;
